// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner/> should render 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: inline-block;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #12D8F7;
  position: absolute;
  color: #8F8F8F;
}

.c4 {
  display: inline-block;
  color: #12D8F7;
  -webkit-animation: epmXAj 1.4s linear infinite;
  animation: epmXAj 1.4s linear infinite;
  color: #FDC01F;
}

.c2 {
  display: block;
}

.c3 {
  stroke: currentColor;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c5 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: jzfMP 1.4s ease-in-out infinite;
  animation: jzfMP 1.4s ease-in-out infinite;
}

<div
    className="spinner"
  >
    <div
      className="c0 MuiBox-root"
    >
      <span
        aria-valuenow={100}
        className="c1 MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "transform": "rotate(-90deg)",
            "width": 40,
          }
        }
      >
        <svg
          className="c2 MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="c3 MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={
              Object {
                "strokeDasharray": "126.920",
                "strokeDashoffset": "0.000px",
              }
            }
          />
        </svg>
      </span>
      <span
        className="c4 MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="c2 MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="c5 MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </span>
    </div>
  </div>,
  "",
]
`;

exports[`<Spinner/> should render the error more 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  display: inline-block;
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  -webkit-transition: transform 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: transform 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #12D8F7;
  color: #F50933;
}

.c2 {
  display: block;
}

.c3 {
  stroke: currentColor;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<div
    className="spinner"
  >
    <div
      className="c0 MuiBox-root"
    >
      <span
        aria-valuenow={100}
        className="c1 MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "transform": "rotate(-90deg)",
            "width": 40,
          }
        }
      >
        <svg
          className="c2 MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="c3 MuiCircularProgress-circle MuiCircularProgress-circleDeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={
              Object {
                "strokeDasharray": "126.920",
                "strokeDashoffset": "0.000px",
              }
            }
          />
        </svg>
      </span>
    </div>
  </div>,
  "",
]
`;
